Finished login changes for activity4, changed connection for azure

--- a/activity4/css/main.css
+++ b/activity4/css/main.css
@@ -15,3 +15,10 @@ a {
 textarea {
     resize: none;
 }
+
+table {
+    border: solid;
+    size: 2px;
+    background-color: blue;
+    padding: 10;
+}
